--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Million Dollar Coder</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="img/image1.avif" type="image/x-icon">
-  <link rel="apple-touch-icon" href="img/image.png">
+  <link rel="stylesheet" href="Project_Site/style.css">
+  <link rel="icon" href="Project_Site/img/image1.avif" type="image/x-icon">
+  <link rel="apple-touch-icon" href="Project_Site/img/image.png">
 </head>
 <body>
   <header>
@@ -23,6 +23,6 @@
     <p>Million Dollar Coder &copy; 2024. All rights reserved.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="Project_Site/script.js"></script>
 </body>
 </html>
